--- a/Clase1.html
+++ b/Clase1.html
@@ -11,6 +11,8 @@
     <button onclick="niveldejuego()">¿Que nivel eres?</button>
     <button onclick="regaño()">Contar</button>
     <button onclick="PPT()">¿Piedra, Papel o Tijera?</button>
+    <button onclick="Fibonacci2()">Serie de Fibonacci (Arrays)</button>
+  <button onclick="Fibonacci()">Serie de Fibonacci</button>
 
     <script src="scripts.js" charset="utf-8"> </script>
   </body>
